Bug 707324 - Story: HTML table row background color repeated incorrectly
Summary: Story: HTML table row background color repeated incorrectly
Status: RESOLVED FIXED
Alias: None
Product: MuPDF
Classification: Unclassified
Component: mupdf (show other bugs)
Version: master
Hardware: PC Windows 10
: P2 normal
Assignee: Robin Watts
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-13 15:47 UTC by Jorj
Modified: 2023-11-16 11:52 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
JavaScript (1.82 KB, application/x-javascript)
2023-11-13 15:47 UTC, Jorj
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jorj 2023-11-13 15:47:36 UTC
Created attachment 25013 [details]
JavaScript

HTML table row background color incorrectly appearing on subsequent pages / "where" rectangles.

Attached a JavaScript outputting a table with alternating row backgrounds that extends across two pages.
Comment 1 Robin Watts 2023-11-16 11:52:51 UTC
Fixed in:

commit 2b5cadbf116877070a5e170b749d6070591dadac
Author: Robin Watts <Robin.Watts@artifex.com>
Date:   Wed Nov 15 17:14:02 2023 +0000

    Bug 707324: Fix stray HTML table rectangles on subsequent pages.

    When skipping over boxes that have previously been placed on other
    pages, ensure we properly set all the table cells to be 0 height
    so we don't accidentally draw them on the next page we layout.