Bug 707324: Fix stray HTML table rectangles on subsequent pages.

When skipping over boxes that have previously been placed on other
pages, ensure we properly set all the table cells to be 0 height
so we don't accidentally draw them on the next page we layout.